--- a/.env
+++ b/.env
@@ -28,7 +28,7 @@
 ##########################################
 
 # ➤ Repository GitHub personale
-NOMEGITHUB=nzo66
+NOMEGITHUB=jimmyoffa
 NOMEREPO=TV
 
 ##########################################
@@ -46,7 +46,7 @@ LINK_DADDY=https://daddylive.sx
 CANALI_DADDY=si
 
 # ➤ Includere eventi in lingua inglese? (si / no)
-EVENTI_EN=no
+EVENTI_EN=si
 
 # ➤ Includere canali WORLD? (si / no)
-WORLD=no
+WORLD=si
